# chat-intelligence-platform

./: FINAL_STUDDY_BUDDY_ERP_SPEC.md  README.md  app.py  helper.py  precprocessor.py  pyproject.toml  requirements-dev.txt  requirements.txt  resume_updated.tex  stop_hinglish.txt
config/: defaults.json
data/sample/: sentiment_validation.csv  whatsapp_chat_sample.txt
docs/: methodology.md  reproducibility.md
notebooks/: 01_exploratory_analysis.ipynb
nova-agent-mvp/: README.md  SETUP_GUIDE.md  settings.gradle.kts
nova-agent-mvp/app/: build.gradle.kts
outputs/cli_eval_smoke/: model_accuracy.csv  model_per_label_metrics.csv  rohanrajpal_bert-base-multilingual-codemixed-cased-sentiment_confusion_matrix.csv  rohanrajpal_bert-base-multilingual-codemixed-cased-sentiment_predictions.csv
outputs/cli_pipeline_smoke/: busy_users.parquet  conversation_sessions.csv  emoji_counts.parquet  graph_edges.csv  graph_nodes.parquet  messages.parquet  metadata.json  month_activity.csv  month_activity.parquet  monthly_timeline.csv  sentiment_by_user.csv  sentiment_by_user.parquet  sentiment_messages.csv  sentiment_messages.parquet  sentiment_summary.csv  sentiment_summary.parquet  sentiment_timeline.csv  sentiment_timeline.parquet  stats.csv  week_activity.csv  week_activity.parquet
outputs/experiment_tracking/: run_log.jsonl
outputs/latest_run/: action_items.csv  action_items.parquet  behavior_profiles.csv  (+55 more)
scripts/: evaluate_models.py  generate_portfolio_assets.py  run_pipeline.py
tests/: test_evaluation.py  test_insights.py  test_pipeline.py  test_preprocessing.py
(+96 files in other folders)
