[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whatsapp-chat-analyser"
version = "0.1.0"
description = "Data-science-friendly WhatsApp chat analysis toolkit"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
